frontend/src/App.module.scss
@import "./helper-styles.scss";

:root {
  font-size: 10px;

  --color-gold: #cea135;
}

.column-wrapper {
  display: flex;
  justify-content: center;
  
  .column {
    width: 150rem;
    height: 100vh;

    display: flex;
    flex-direction: column;
    row-gap: 2rem;
  }
}

